--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#ide
+.idea
+*.DS_Store
+cmake-*
+.spyderproject
+.spyproject
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -110,9 +117,6 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
 
 # Rope project settings
 .ropeproject
